[package]
name = "amac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
pin-project = "1.1.3"

[dev-dependencies]
clf = "0.1.7"
criterion = { version = "0.4", features = ["html_reports"] }
pprof = { version = "0.12.1", features = ["flamegraph"] }
rand = "0.8.5"

[[bench]]
name = "binary_search"
harness = false
